<resources>
    <string name="app_name">Placemark</string>
    <string name="button_addPlacemark">Add Placemark</string>
    <string name="button_savePlacemark">Save Placemark</string>
    <string name="button_changeImage">Change Image</string>
    <string name="hint_placemarkTitle">Placemark Title</string>
    <string name="hint_placemarkDescription">Placemark Description</string>
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_CancelPlacemark">Cancel</string>
    <string name="error_Title">Please Enter a Title</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_placemark_image">Select Placemark Image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Placemark Map</string>
    <string name="menu_deletePlacemark">Delete</string>
    <string name="title_activity_placemark_maps">Map of All Placemarks </string>
</resources>
