<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/item_save"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/menu_addPlacemark" app:showAsAction="always"/>
    <item
            android:id="@+id/item_cancel"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/menu_CancelPlacemark" app:showAsAction="always"/>
    <item
            android:visible="false"
            android:id="@+id/item_delete"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/menu_deletePlacemark"
            app:showAsAction="always"/>
</menu>