<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.wit.placemark.activities.PlacemarkActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:fitsSystemWindows="true"
                app:elevation="0dip"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbarAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleTextColor="@color/colorPrimary"/>
        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/appBarLayout"
                android:fillViewport="true">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/placemarkTitle"
                    android:layout_width="382dp"
                    android:layout_height="43dp"
                    android:hint="@string/hint_placemarkTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    tools:layout_conversion_absoluteHeight="35dp"
                    tools:layout_conversion_absoluteWidth="395dp"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.538" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="381dp"
                    android:layout_height="40dp"
                    android:hint="@string/hint_placemarkDescription"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    tools:layout_conversion_absoluteHeight="35dp"
                    tools:layout_conversion_absoluteWidth="395dp"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/placemarkTitle"/>
            <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="121dp"
                    android:layout_height="47dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="379dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/btnAdd" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/placemarkLocation"
                    app:layout_constraintHorizontal_bias="0.063"/>
            <ImageView
                    android:id="@+id/placemarkImage"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:srcCompat="@mipmap/ic_launcher"
                    tools:layout_conversion_absoluteHeight="194dp"
                    tools:layout_conversion_absoluteWidth="411dp"
                    app:layout_constraintTop_toBottomOf="@+id/placemarkLocation" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.57"/>
            <Button
                    android:id="@+id/placemarkLocation"
                    android:layout_width="124dp"
                    android:layout_height="51dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_location"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="379dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/btnAdd" android:layout_marginEnd="12dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="384dp"
                    android:layout_height="50dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addPlacemark"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="379dp"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/description"
                    app:layout_constraintHorizontal_bias="0.498"/>
        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
